@startuml

title __PROJECTENCRYPTION's Class Diagram__\n

  namespace projectEncryption {
    abstract class projectEncryption.Algorithem {
        - keys : LinkedList<Integer>
        + Algorithem()
        + getKeys()
        + setKeys()
        # MoveBites()
    }
  }
  

  namespace projectEncryption {
    interface projectEncryption.AlgorithemModel {
        + createKeys()
        {abstract} + decrypt()
        {abstract} + encrypt()
    }
  }
  

  namespace projectEncryption {
    class projectEncryption.EulerPhiToitenEncryption {
        + EulerPhiToitenEncryption()
        + decrypt()
        + encrypt()
        - CreateFile()
        - phi()
    }
  }
  

  namespace projectEncryption {
    class projectEncryption.HammiltonCircuitEncryption {
        - keys : List<Integer>
        + HammiltonCircuitEncryption()
        + decrypt()
        + encrypt()
        + showKeys()
    }
  }
  

  namespace projectEncryption {
    class projectEncryption.HammiltonCircuitEncryption.HamiltonianCircuit {
        {static} + findHamiltonianCircuit()
        {static} + generateRandomGraph()
        {static} - dfs()
    }
  }
  

  namespace projectEncryption {
    class projectEncryption.Modulo10Encryption {
        + Modulo10Encryption()
        + createKeys()
        + decrypt()
        + encrypt()
    }
  }
  

  namespace projectEncryption {
    class projectEncryption.SudokuEncryption {
        {static} - SIZE : int
        - board : int[][]
        - random : Random
        + SudokuEncryption()
        + createKeys()
        + decrypt()
        + encrypt()
        + generate()
        - generate()
        - isValid()
        - nextCol()
        - nextRow()
        - shuffle()
    }
  }
  

  namespace projectEncryption {
    class projectEncryption.UI {
        - selectedFile : File
        + UI()
        + getSelectedFile()
        + setSelectedFile()
        - Decrypt()
    }
  }
  

  namespace projectEncryption {
    class projectEncryption.main {
        {static} + main()
    }
  }
  

  projectEncryption.Algorithem .up.|> projectEncryption.AlgorithemModel
  projectEncryption.EulerPhiToitenEncryption -up-|> projectEncryption.Algorithem
  projectEncryption.HammiltonCircuitEncryption -up-|> projectEncryption.Algorithem
  projectEncryption.HammiltonCircuitEncryption +-down- projectEncryption.HammiltonCircuitEncryption.HamiltonianCircuit
  projectEncryption.Modulo10Encryption -up-|> projectEncryption.Algorithem
  projectEncryption.SudokuEncryption -up-|> projectEncryption.Algorithem
  projectEncryption.UI -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
